# page

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  build_package_sources.sh.in  configure  configure.ac  page.conf  page.conf.in  page.desktop.in  release_sources.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  atoms.h  atoms.hxx  blur_image_surface.cxx  blur_image_surface.hxx  box.hxx  cairo_surface_type_name.hxx  client.c  client.cxx  client.h  client.hxx  client_base.cxx  client_base.hxx  client_managed.cxx  client_managed.hxx  client_not_managed.cxx  client_not_managed.hxx  client_properties.cxx  client_properties.hxx  client_property_list.hxx  client_proxy.cxx  client_proxy.hxx  color.hxx  composite_surface.cxx  composite_surface.hxx  composite_surface_manager.cxx  composite_surface_manager.hxx  composite_window.cxx  composite_window.hxx  compositor.cxx  compositor.hxx  compositor_overlay.cxx  compositor_overlay.hxx  config.hxx.in  config_handler.cxx  config_handler.hxx  default_theme.cxx  default_theme.hxx  desktop.cxx  (+181 more)
src_next/: Makefile.am  atoms.hxx  box.cxx  box.hxx  client.cxx  client.hxx  main.cxx  notebook.cxx  notebook.hxx  page.cxx  page.hxx  root.cxx  root.hxx  split.cxx  split.hxx  tree.cxx  tree.hxx
