
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

pagedatadir = $(datadir)/page

nobase_dist_pagedata_DATA = \
	data/close_button.png \
	data/hsplit_button.png \
	data/pop_button_bk.png \
	data/pops_button.png \
	data/view-restore.png \
	data/window-close.png \
	data/window-close-1.png \
	data/edit-delete.png \
	data/media-eject.png \
	data/pop.png \
	data/pop_selected.png \
	data/vsplit_button.png \
	page.conf


